# mcp-a2a-acp

./: .vercelignore  README.md  README_DEMO.md  context_attrs.txt  demo_client.py  main.py  package-lock.json  pyproject.toml  render.yaml  requirements.txt  run_event_server.py  start_all.bat  test_mcp_websocket.py  test_researcher_websocket.py  test_writer_websocket.py  types_list.txt  vercel.json
backend/: a2a_server.py  event_broadcaster.py  researcher_agent.py  writer_agent.py
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/demo/: route.ts
dashboard/components/: EventStream.tsx  FinalReportModal.tsx  FlowDiagram.tsx  MessageInspector.tsx  StartDemoModal.tsx  StepExplainer.tsx  TraceTimeline.tsx
dashboard/hooks/: useEventStream.ts
dashboard/lib/: sampleEvents.ts  types.ts
mcp_bridge/: server_draft.py
mcp_server/: event_server.py  server.py
